# evomata12

./: Cargo.toml  README.md
src/: main.rs
src/sim/: brain.rs  mod.rs
src/sim/brain/: gru.rs  mod.rs
