[package]
name = "evomata12"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[dependencies]
gridsim-ui = "0.3.0"
gridsim = "0.2.0"
rand = "0.5.0-pre.2"
noisy_float = "0.1.4"
boolinator = "2.4.0"
array-init = "0.0.3"
serde = "1.0.0"
serde_derive = "1.0.0"
os_pipe = "0.6.1"

[dependencies.nalgebra]
version = "0.16.0"
features = ["serde-serialize"]
